changes from fixed branch

--- a/assignment_2.html
+++ b/assignment_2.html
@@ -8,6 +8,7 @@
     <title>2nd Assignment</title>
     <title>Making new branches </title>
     <p>hello this change</p>
+    <p>this is second change</p>
    <!---- <style>
         body {
                 background-color:green;
